# patterns

./: CMakeLists.txt  README.md  game.cpp  main.cpp
army/: CMakeLists.txt  army.h  squad.h
factories/: CMakeLists.txt  abstract_factory.cpp  abstract_factory.h  air_factory.cpp  air_factory.h  earth_factory.cpp  earth_factory.h  fire_factory.cpp  fire_factory.h  water_factory.cpp  water_factory.h
structure/: CMakeLists.txt  composite.cpp  composite.h
tests/: CMakeLists.txt  tests.cpp
units/: CMakeLists.txt  animal.cpp  animal.h  boy.cpp  boy.h  girl.cpp  girl.h  unit.h
